# polann

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: PolannConfig.cmake.in  config.h.in
examples/: CMakeLists.txt  custom_model.cpp  simple_model.cpp
include/core/: layer.hpp
include/models/: ann.hpp
include/polann/core/: dataset.hpp  layer.hpp  model_builder.hpp  model_trainer.hpp
include/polann/layers/: dense.hpp
include/polann/loss/: mse.hpp
include/polann/models/: nn.hpp
include/polann/optimizers/: sgd.hpp
include/polann/utils/: activation_functions.hpp  io.hpp  loss_functions.hpp
include/utils/: activation.hpp  activation_functions.hpp
src/: CMakeLists.txt  main.cpp
src/models/: nn.cpp
